<resources>
    <string name="app_name">AIE</string>

    <string name="add">Add new</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="start_at">Start at</string>
    <string name="end_at">Ent at</string>
    <string name="today">Today</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="reset_all">Reset all</string>
    <string name="detect_reservation">Your reservation today?</string>
    <string name="reservation_date">Reservation date</string>
    <string name="reservation">Reservation Now</string>
    <string name="reservation_start">Reservation Start</string>
    <string name="reservation_name">Reservation Name</string>
    <string name="creator_name">Creator Name</string>
    <string name="time_range">Reservation time</string>
    <string name="reservation_message">Please fill all reservation details here jst to know must to fill all reservation info</string>
    <string name="aie_task">Mohammad Obeidat AIE task</string>

</resources>