<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="@color/white"
    tools:context=".view.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aie_task"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:layout_marginStart="100dp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="100">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="50">

                <RelativeLayout
                    android:id="@+id/main_activity_add_rl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/add_new_d">

                    <TextView
                        android:id="@+id/main_activity_add_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/add"
                        android:textColor="@color/colorBlue"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="50">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/main_activity_reset_all_rl"
                    android:background="@drawable/reset_all"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_all"
                        android:layout_centerVertical="true"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_centerHorizontal="true"
                        />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_data_recycler_view"
            android:layout_marginTop="10dp"

            />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>